# RSLint

./: .gitattributes  .gitignore
.github/workflows/: rust.yml
crates/rslint_cli/: Cargo.toml
crates/rslint_cli/src/: lib.rs  main.rs
crates/rslint_core/: Cargo.toml
crates/rslint_core/benches/: bench.rs
crates/rslint_core/src/: lib.rs  rule.rs  store.rs  testing.rs
crates/rslint_core/src/autofix/: apply.rs
crates/rslint_lsp/src/provider/: diagnostics.rs
crates/rslint_parser/: CHANGELOG.MD
crates/rslint_parser/src/: ast.rs
crates/rslint_parser/src/ast/: stmt_ext.rs
crates/rslint_scope/: Cargo.toml  ddlog.sh
crates/rslint_scope/ddlog/: ast.dl  config.dl  config.rs  inputs.dl  is_exported.dl  name_in_scope.dl  rslint_scoping.ddlog  rslint_scoping.dl  rslint_scoping.rs  scopes.dl
crates/rslint_scope/ddlog/outputs/: no_shadow.dl  no_undef.dl  no_unused_labels.dl  typeof_undef.dl  unused_vars.dl  use_before_def.dl
crates/rslint_scope/rslint_scoping_ddlog/: Cargo.toml  rslint_scoping.dot
crates/rslint_scope/rslint_scoping_ddlog/src/: lib.rs  main.rs
crates/rslint_scope/rslint_scoping_ddlog/types/: Cargo.toml  lib.rs
crates/rslint_scope/src/: datalog.rs  lib.rs
crates/rslint_scope/src/analyzer/: expr.rs  mod.rs  stmt.rs
crates/rslint_scope/src/datalog/: builder.rs  derived_facts.rs  mod.rs
crates/rslint_scope/src/scoping/: mod.rs
crates/rslint_scope/src/tests/: mod.rs  no_shadow.rs  no_undef.rs  no_unused_labels.rs  no_unused_vars.rs  use_before_def.rs
crates/rslint_syntax/src/: generated.rs
xtask/src/: ast.rs  datalog.rs
(+7 files in other folders)
